# gVoice

./: CMakeLists.txt  GenCMake.bat  GenDLLs.bat  GenZip.bat  Install.bat  LICENSE  PackAddon.bat  README.md  addon.json
cpp/: CMakeLists.txt
cpp/gvoice/: gvoice.cpp
cpp/gvoice/fmt/: core.h  format-inl.h  format.h
lua/autorun/client/: gvoice.lua
sources/cpp/gvoice/: CMakeLists.txt  gvoice.cpp
sources/cpp/include/: CMakeLists.txt
sources/lua/autorun/client/: gvoice.lua
